--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">kupay钱包</string>
+    <string name="app_name">KuPay钱包</string>
     <string name="init_url">file:///android_asset/index.html</string>
     <string name="compile_web_view_version_code">50</string>
     <string name="connect_url_time_out_value">20000</string>
