--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -10,9 +10,9 @@
     <string name="dialog_msg_confirm_exit_app">Are you sure exit the application？</string>
     <!--权限相关-->
     <string name="tip_please_allow_app_install_unknown_res_apk">Please allow "Ku Play" to install apps from unknown sources！</string>
-    <string name="tip_please_allow_app_read_contacts">To access contacts from a local contact, you need to use the contact permission. Please open it in the settings before using this function.</string>
-    <string name="tip_please_allow_app_read_gallery_with_camera">Use camera permission, read and write phone storage permission</string>
-    <string name="tip_please_allow_app_read_gallery_without_camera">Open album needs to read phone storage permission</string>
-    <string name="tip_please_allow_app_scan_qr_code">Scanning the QR code must use the camera function, please go to "Settings" to open the camera permissions</string>
+    <string name="tip_please_allow_app_read_contacts">To access contacts from a local contact, you need to use the contact permission. Please turn to "setting -> permission" to allow the permission.</string>
+    <string name="tip_please_allow_app_read_gallery_with_camera">Use camera must read and write phone storage permission,turn to "setting -> permission" to allow the permission.</string>
+    <string name="tip_please_allow_app_read_gallery_without_camera">Open album needs to read phone storage permission,turn to "setting -> permission" to allow the permission.</string>
+    <string name="tip_please_allow_app_scan_qr_code">Scanning the QR code must use the camera ,the camera can not work without the permission, please turn to "setting -> permission" to allow the camera permissions</string>
     <string name="tip_misseed_permission_default_prompt">The current app lacks the necessary permissions. \n\n Please click  "Settings "- "Permissions "-To open the required permissions.</string>
 </resources>
