--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,10 +17,10 @@
     <string name="tip_misseed_permission_default_prompt">当前应用缺少必要权限。\n \n请点击"设置"-"权限"-打开所需权限。</string>
     <!--配置-->
     <!--<string name="init_url" translatable="false">http://47.75.254.166:80/wallet/app/boot/index.html</string>&lt;!&ndash;要加载的首个网页&ndash;&gt;-->
-    <string name="init_url" translatable="false">http://192.168.9.28:8088/dst/boot/index.html</string><!--要加载的首个网页-->
+    <string name="init_url" translatable="false">http://192.168.9.28/wallet/app/boot/index.html</string><!--要加载的首个网页-->
     <!--<string name="init_url">http://192.168.9.24:8088/dst/boot/index.html</string>&lt;!&ndash;陈杰 PI测试通信&ndash;&gt;-->
     <string name="connect_url_time_out_value" translatable="false">20000</string><!--连接超时的时间-->
-    <string name="web_view_intercept" translatable="false">0</string><!--拦截WebView的http请求-->
+    <string name="web_view_intercept" translatable="false">1</string><!--拦截WebView的http请求-->
     <string name="compile_web_view_version_code" translatable="false">50</string><!--浏览器的版本号临界值、低于这个值将会使用X5Chrome-->
     <string name="whether_show_launch_animation" translatable="false">0</string><!--是否显示启动的动画-->
     <string name="launch_animation_least_last_time" translatable="false">600</string><!--动画的最低持续时间(ms)-->
