--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="tip_misseed_permission_default_prompt">当前应用缺少必要权限。\n \n请点击"设置"-"权限"-打开所需权限。</string>
     <!--配置-->
     <string name="init_url" translatable="false">/dst/boot/index.html</string><!--要加载的首个网页，如需要用本地打包，一定要以/开头-->
+    <string name="referer_url" translatable="false">http://www.baidu.com</string><!--referer的字段-->
     <!--<string name="init_url">http://192.168.9.24:8088/dst/boot/index.html</string>&lt;!&ndash;陈杰 PI测试通信&ndash;&gt;-->
     <string name="connect_url_time_out_value" translatable="false">20000</string><!--连接超时的时间-->
     <string name="web_view_intercept" translatable="false">1</string><!--拦截WebView的http请求-->
